--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="cps-webpack-test2/src/assets/img/header_img/logo.svg">
+    <link rel="icon" href="/src/assets/img/header_img/logo.svg">
     <title>CPS</title>
 <script defer src="bundle.js"></script></head>
 
@@ -18,7 +18,7 @@
                     </button>
                 </nav>
                 <div class="header-basic__logo">
-                    <img src="cps-webpack-test2/src/assets/img/header_img/logo.svg" alt="логотип">
+                    <img src="../src/assets/img/header_img/logo.svg" alt="логотип">
                 </div>
             </section>
             <nav class="header-navigation">
@@ -88,7 +88,7 @@
                 <div class="aside__header-nav">
                     <section class="aside__header">
                         <button class="aside__header-bottom bottom close aside-dn" id="BurgerDis"></button>
-                        <img src="cps-webpack-test2/src/assets/img/header_img/logo.svg" alt="логотип" class="aside__logo">
+                        <img src="/src/assets/img/header_img/logo.svg" alt="логотип" class="aside__logo">
                         <button class="aside__header-bottom bottom search"></button>
                     </section>
                     <section class="aside__navigation">
@@ -215,7 +215,7 @@
                             onclick="mainTextShow()">Читать далее</button>
                     </section>
                     <section class="content__img">
-                        <img src="cps-webpack-test2/src/assets/img/main_img/logo.png" class="content-img" alt="Наша компания">
+                        <img src="/src/assets/img/main_img/logo.png" class="content-img" alt="Наша компания">
                     </section>
                 </article>
                 <article class="repair-brends">
